--- a/haskellmode.config
+++ b/haskellmode.config
@@ -1,7 +1,9 @@
--- 7.4.1
+-- 7.8.2
+AllowAmbiguousTypes
 AlternativeLayoutRule
 AlternativeLayoutRuleTransitional
 Arrows
+AutoDeriveTypeable
 BangPatterns
 CApiFFI
 CPP
@@ -18,9 +20,11 @@ DeriveTraversable
 DisambiguateRecordFields
 DoAndIfThenElse
 DoRec
+EmptyCase
 EmptyDataDecls
 ExistentialQuantification
 ExplicitForAll
+ExplicitNamespaces
 ExtendedDefaultRules
 FlexibleContexts
 FlexibleInstances
@@ -36,8 +40,11 @@ ImplicitParams
 ImplicitPrelude
 ImpredicativeTypes
 IncoherentInstances
+InstanceSigs
 InterruptibleFFI
+JavaScriptFFI
 KindSignatures
+LambdaCase
 LiberalTypeSynonyms
 MagicHash
 MonadComprehensions
@@ -45,11 +52,15 @@ MonoLocalBinds
 MonoPatBinds
 MonomorphismRestriction
 MultiParamTypeClasses
+MultiWayIf
 NPlusKPatterns
 NamedFieldPuns
+NegativeLiterals
+NoAllowAmbiguousTypes
 NoAlternativeLayoutRule
 NoAlternativeLayoutRuleTransitional
 NoArrows
+NoAutoDeriveTypeable
 NoBangPatterns
 NoCApiFFI
 NoCPP
@@ -66,9 +77,11 @@ NoDeriveTraversable
 NoDisambiguateRecordFields
 NoDoAndIfThenElse
 NoDoRec
+NoEmptyCase
 NoEmptyDataDecls
 NoExistentialQuantification
 NoExplicitForAll
+NoExplicitNamespaces
 NoExtendedDefaultRules
 NoFlexibleContexts
 NoFlexibleInstances
@@ -82,8 +95,11 @@ NoImplicitParams
 NoImplicitPrelude
 NoImpredicativeTypes
 NoIncoherentInstances
+NoInstanceSigs
 NoInterruptibleFFI
+NoJavaScriptFFI
 NoKindSignatures
+NoLambdaCase
 NoLiberalTypeSynonyms
 NoMagicHash
 NoMonadComprehensions
@@ -91,16 +107,22 @@ NoMonoLocalBinds
 NoMonoPatBinds
 NoMonomorphismRestriction
 NoMultiParamTypeClasses
+NoMultiWayIf
 NoNPlusKPatterns
 NoNamedFieldPuns
+NoNegativeLiterals
 NoNondecreasingIndentation
+NoNullaryTypeClasses
+NoNumDecimals
 NoOverlappingInstances
+NoOverloadedLists
 NoOverloadedStrings
 NoPackageImports
 NoParallelArrays
 NoParallelListComp
 NoPatternGuards
 NoPatternSignatures
+NoPatternSynonyms
 NoPolyKinds
 NoPolymorphicComponents
 NoPostfixOperators
@@ -113,6 +135,7 @@ NoRecordWildCards
 NoRecursiveDo
 NoRelaxedLayout
 NoRelaxedPolyRec
+NoRoleAnnotations
 NoScopedTypeVariables
 NoStandaloneDeriving
 NoTemplateHaskell
@@ -128,13 +151,17 @@ NoUnicodeSyntax
 NoUnliftedFFITypes
 NoViewPatterns
 NondecreasingIndentation
+NullaryTypeClasses
+NumDecimals
 OverlappingInstances
+OverloadedLists
 OverloadedStrings
 PackageImports
 ParallelArrays
 ParallelListComp
 PatternGuards
 PatternSignatures
+PatternSynonyms
 PolyKinds
 PolymorphicComponents
 PostfixOperators
@@ -147,6 +174,7 @@ RecordWildCards
 RecursiveDo
 RelaxedLayout
 RelaxedPolyRec
+RoleAnnotations
 Safe
 ScopedTypeVariables
 StandaloneDeriving
@@ -165,85 +193,4 @@ UnliftedFFITypes
 Unsafe
 ViewPatterns
 --
--fdo-lambda-eta-expansion
--fembed-manifest
--fgen-manifest
--fghci-history
--fghci-sandbox
--fhelpful-errors
--fignore-interface-pragmas
 -fimplicit-import-qualified
--fno-break-on-error
--fno-break-on-exception
--fno-building-cabal-package
--fno-case-merge
--fno-cse
--fno-dicts-cheap
--fno-do-eta-reduction
--fno-eager-blackholing
--fno-enable-rewrite-rules
--fno-excess-precision
--fno-expose-all-unfoldings
--fno-ext-core
--fno-float-in
--fno-force-recomp
--fno-full-laziness
--fno-hpc-no-auto
--fno-ignore-asserts
--fno-liberate-case
--fno-new-codegen
--fno-pedantic-bottoms
--fno-print-bind-result
--fno-print-evld-with-show
--fno-print-explicit-foralls
--fno-prof-cafs
--fno-regs-graph
--fno-regs-iterative
--fno-rewrite-rules
--fno-run-cps
--fno-run-cpsz
--fno-spec-constr
--fno-specialise
--fno-static-argument-transformation
--fno-strictness
--fno-unbox-strict-fields
--fno-vectorise
--fno-warn-auto-orphans
--fno-warn-dodgy-exports
--fno-warn-dodgy-imports
--fno-warn-hi-shadowing
--fno-warn-identities
--fno-warn-implicit-prelude
--fno-warn-incomplete-patterns
--fno-warn-incomplete-record-updates
--fno-warn-incomplete-uni-patterns
--fno-warn-missing-import-lists
--fno-warn-missing-local-sigs
--fno-warn-missing-signatures
--fno-warn-monomorphism-restriction
--fno-warn-name-shadowing
--fno-warn-orphans
--fno-warn-safe
--fno-warn-tabs
--fno-warn-type-defaults
--fno-warn-unsafe
--fno-warn-unused-binds
--fno-warn-unused-do-bind
--fno-warn-unused-imports
--fno-warn-unused-matches
--fomit-interface-pragmas
--fprint-bind-contents
--fprof-count-entries
--fshared-implib
--fwarn-alternative-layout-rule-transitional
--fwarn-deprecated-flags
--fwarn-deprecations
--fwarn-dodgy-foreign-imports
--fwarn-duplicate-exports
--fwarn-lazy-unlifted-bindings
--fwarn-missing-fields
--fwarn-missing-methods
--fwarn-overlapping-patterns
--fwarn-unrecognised-pragmas
--fwarn-warnings-deprecations
--fwarn-wrong-do-bind
